--- a/src/Assinatura.Infra.Drive/Assinatura.Infra.Drive.csproj
+++ b/src/Assinatura.Infra.Drive/Assinatura.Infra.Drive.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Assinatura.Infra.Data\Assinatura.Infra.Data.csproj" />
   </ItemGroup>
 
